--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,21 @@
 # H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
-
-# Datasource
-spring.datasource.url=jdbc:h2:file:C:\\Users\\Alex\\Documents\\bancoDados\\moneyControl
+#
+## Datasource
+spring.datasource.url=jdbc:h2:file:C:\\Users\\Alex\\Documents\\bancoDados\\moneyControl	
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.database=POSTGRESQL
+#spring.datasource.platform=postgres
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.database.driverClassName=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/money_control
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+#server.port=8080
+#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
